--- a/tinypng/index.html
+++ b/tinypng/index.html
@@ -8,22 +8,22 @@
   </head>
   <body>
     <div class="content">
-      <h1><p><b>Загрузите ваше фото для сжатия</b></p></h1>
-      <form action="" method="post" name="loading" id="loading" enctype="multipart/form-data">
-        <input type="file" name="fileToUpload" id="fileToUpload"><br> 
-        <input type="submit" value="Загрузить"><br>
+      <h1 class="title">Загрузите фото</h1>
+      <form action="" method="post" name="loading" id="loading" enctype="multipart/form-data" class="form-new-file">
+        <input type="file" name="fileToUpload" id="fileToUpload" class="new-file">
+        <input type="submit" value="Загрузить" class="submit-button">
       </form>
+      <div class="loading-content">
+          <img src="img/loading.gif" alt="loading" />
+          <div class="text-message">Пожалуйста, подождите. Идёт загрузка изображения</div>
+      </div>
     </div>
     <div class="content content-img" id="contentImg">
        <div>
-         <h2>Исходное изображение</h2>
-         <img src="img/loading.png" class="loading" alt="loading" id="originalImg" />
-         <div id="originalSize"></div>
-       </div>
-       <div>
-        <h2>Сжатое изображение</h2>
-        <img src="img/loading.png" class="loading" alt="loading" id="tinyImg" />
-        <div id="tinySize"></div>
+        <h2 class="title-new">Готовое изображение:</h2>
+        <img src="img/first.png" alt="loading" id="tinyImg" />
+        <div id="originalSize" class="text-message size"></div>
+        <div id="tinySize"class="text-message size"></div>
        </div>
     </div>
     <script type="text/javascript" src="js/jquery-2.0.0.min.js"></script>
