--- a/tinypng/index.html
+++ b/tinypng/index.html
@@ -7,24 +7,22 @@
     <link rel="shortcut icon" href="panda.ico" type="image/x-icon">
   </head>
   <body>
-    <div class="content">
-      <h1 class="title">Загрузите фото</h1>
-      <form action="" method="post" name="loading" id="loading" enctype="multipart/form-data" class="form-new-file">
-        <input type="file" name="fileToUpload" id="fileToUpload" class="new-file">
-        <input type="submit" value="Загрузить" class="submit-button">
+    <div class="content" id="content-main">
+      <h1 class="title">Загрузите фото для сжатия</h1>
+      <form action="" method="post" name="loading" id="loading" enctype="multipart/form-data" class="form-new-file box">
+        <div class="box__input">
+          <input type="file" name="files[]" id="fileToUpload" class="new-file" multiple>
+          <label for="fileToUpload">
+            <div class="upload">
+              <div class="upload-file"></div>
+              <span class="box-dragndrop">Выберите файлы или перетащите сюда</span>
+            </div>
+          </label>
+          <input type="submit" value="Загрузить" class="submit-button">
+        </div>
       </form>
-      <div class="loading-content">
-          <img src="img/loading.gif" alt="loading" />
-          <div class="text-message">Пожалуйста, подождите. Идёт загрузка изображения</div>
-      </div>
     </div>
     <div class="content content-img" id="contentImg">
-       <div>
-        <h2 class="title-new">Готовое изображение:</h2>
-        <img src="img/first.png" alt="loading" id="tinyImg" />
-        <div id="originalSize" class="text-message size"></div>
-        <div id="tinySize"class="text-message size"></div>
-       </div>
     </div>
     <script type="text/javascript" src="js/jquery-2.0.0.min.js"></script>
     <script type="text/javascript" src="js/tiny.js"></script>
